# trivial_renderer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.e5b88a9  README.md  cmdline.c  cmdline.ggo  cmdline.h  comandos  main.cpp  mainwindow.cpp  minput.cpp  minput.h  tdraw.cpp  tdraw.h  timage.cpp  timage.h  tinput.cpp  tinput.h  tmatrix4x4.cpp  tmatrix4x4.h  tmodel.cpp  tmodel.h  tpoint.h  trivial_renderer.pro  tshading.cpp  tshading.h  tvector3d.cpp  tvector3d.h  tvector4d.cpp  tvector4d.h
TImage/: timage.cpp  timage.h
TInput/: minput.cpp  minput.h
tdraw/: tdraw.cpp  tdraw.h
timage/: timage.cpp  timage.h
tinput/: cmdline.ggo  minput.cpp  minput.h  tinput.cpp  tinput.h
tmath/: tmatrix4x4.h  tvector3d.cpp  tvector3d.h  tvector4d.cpp  tvector4d.h
tmodel/: tmodel.cpp  tmodel.h
trivial_renderer/: mainwindow.cpp  mainwindow.h  mainwindow.ui  tdialog.cpp  tdialog.h  tdialog.ui  tdraw.cpp  tdraw.h  tmatrix4x4.cpp  tmatrix4x4.h  tmodel.cpp  tmodel.h  tpoint.h  treadmodel.cpp  treadmodel.h  trivial_renderer.pro  tvector3d.cpp  tvector3d.h  tvector4d.cpp  tvector4d.h
